# racing-simulator-nechibylo

./: CMakeLists.txt  CMakePresets.json  CMakeRacing.cpp  CMakeRacing.h  Functions.cpp  Functions.h  RacingType.h  TransportList.h
transports/: Transport.cpp  Transport.h  TransportCollection.h
transports/flyingTransports/: FlyingTransport.cpp  FlyingTransport.h
transports/flyingTransports/broomstick/: Broomstick.cpp  Broomstick.h
transports/flyingTransports/eagle/: Eagle.cpp  Eagle.h
transports/flyingTransports/magicCarpet/: MagicCarpet.cpp  MagicCarpet.h
transports/landingTransports/: LandingTransport.cpp  LandingTransport.h
transports/landingTransports/camel/: Camel.cpp  Camel.h
transports/landingTransports/centaur/: Centaur.cpp  Centaur.h
transports/landingTransports/crossoverShoes/: CrossoverShoes.cpp  CrossoverShoes.h
transports/landingTransports/fastCamel/: FastCamel.cpp  FastCamel.h
